force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>This details records relating to events held by or for Atlas Assistance Dogs</description>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>