force-app/main/default/objects/Event__c/fields/Date_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Event__c</fullName>
    <description>The date the event was held</description>
    <label>Date of Event</label>
    <type>Date</type>
</CustomField>