force-app/main/default/objects/Event__c/fields/Event_Notes__c.field-meta.xml
<CustomField>
    <fullName>Event_Notes__c</fullName>
    <description>This field allows the user to write detailed notes about the event</description>
    <label>Event Notes</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>