force-app/main/default/objects/Event__c/fields/Zoom_Call__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Call__c</fullName>
    <label>Zoom Call</label>
    <referenceTo>zoom_app__Zoom__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>