force-app/main/default/objects/Event__c/recordTypes/Continuing_Education_Unit.recordType-meta.xml
<RecordType>
    <fullName>Continuing_Education_Unit</fullName>
    <active>false</active>
    <description>This type of event is specifically for trainers to earn CEU&apos;s</description>
    <label>Continuing Education Unit</label>
</RecordType>