force-app/main/default/objects/Event__c/recordTypes/Fundraiser_Event.recordType-meta.xml
<RecordType>
    <fullName>Fundraiser_Event</fullName>
    <active>true</active>
    <description>Events which are provided to help raise money for Atlas</description>
    <label>Fundraiser Event</label>
</RecordType>